--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 
 html{
     font-family: 'Open Sans', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -61,6 +62,35 @@ nav.bg-color-dark-blue.scrolled{
 
 /* --Renkler */
 
+/* Media Query */
+@media screen and (min-width: 1200px){
+    #aboutText{
+        font-size: 1.25rem;
+    
+    }
+}
+
+@media screen and (max-width: 1201px) {
+    #aboutText{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    #aboutText{
+        font-size: .75rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #aboutText{
+        font-size: .5rem;
+        font-weight: 600;
+    }
+}
+
+/* Media Query */
+
 nav div ul li a{
     border-radius: 5px;
     color: var(--white) !important;
@@ -78,7 +108,7 @@ nav div ul li a:hover{
 }
 
 .centered{
-    top: 50%;
+    top: 30%;
     left: 50%;
     width: 80%;
     transform: translate(-50%, -50%);
@@ -134,9 +164,10 @@ nav div ul li a:hover{
 
 /* toggle button için */
 
+/* animasyon */
 #home .animated{
     animation-name: homeAnimation;
-    animation-duration: 2.5s;  
+    animation-duration: 1.5s;  
     animation-fill-mode: forwards;
     animation-timing-function: ease-out;
 }
@@ -148,10 +179,25 @@ nav div ul li a:hover{
         text-shadow: none;
     }
     to {
-        top: 30%;
+        top: 40%;
         left: 50%;
         width: 80%;
         transform: translate(-50%, -50%);
-        transition: 2.5s ease-out;
+        transition: 1.5s ease-out;
     }
   }
+/* animasyon */
+
+/* section border */
+
+#about .bordered-section{
+    width: fit-content;
+    height: fit-content;
+    margin: 50px auto;
+    border-bottom: 1px solid var(--dark-blue);
+}
+
+/* section border */ 
+
+
+
