--- a/main.css
+++ b/main.css
@@ -64,28 +64,34 @@ nav.bg-color-dark-blue.scrolled{
 
 /* Media Query */
 @media screen and (min-width: 1200px){
-    #aboutText{
+    #aboutText,nav div ul li a{
         font-size: 1.25rem;
-    
     }
 }
 
 @media screen and (max-width: 1201px) {
-    #aboutText{
+    #aboutText,nav div ul li a{
         font-size: 1rem;
     }
 }
 
 @media screen and (max-width: 991px) {
-    #aboutText{
+    #aboutText,nav div ul li a{
         font-size: .75rem;
     }
 }
 
 @media screen and (max-width: 600px) {
-    #aboutText{
-        font-size: .5rem;
+    #aboutText,nav div ul li a{
+        font-size: .65rem;
         font-weight: 600;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .carousel-box{
+        width: 100%;
+        border-radius: 0px 0px !important;
     }
 }
 
@@ -95,7 +101,7 @@ nav div ul li a{
     border-radius: 5px;
     color: var(--white) !important;
     text-align: center;
-    font-size: 2vw;
+    /* font-size: 2vw; */
     transition: background-color .75s;
 }
 
@@ -199,5 +205,55 @@ nav div ul li a:hover{
 
 /* section border */ 
 
+/* carousel */
 
+.carousel-box{
+    top: 50%;
+    left: 50%;
+    height: 35%;
+    border-radius: 30px 0 30px 0;
+    transform: translate(-50%, -50%);
+  
+}
 
+.carousel-text{
+    color: var(--white);
+    text-align: center;
+    /* text-indent: 3vw; */
+}
+
+.carousel-text p{
+    height: 7.5rem;
+}
+
+.carousel-item img{
+    border-radius: 50%;
+}
+
+.carousel-fade .carousel-item {
+	opacity: 0;
+	transition-duration: .6s;
+	transition-property: opacity;
+}
+
+.carousel-fade .carousel-item.active,
+.carousel-fade .carousel-item-next.carousel-item-left,
+.carousel-fade .carousel-item-prev.carousel-item-right {
+	opacity: 1;
+}
+
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-right {
+	opacity: 0;
+}
+
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item.active,
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-prev {
+	transform: translateX(0);
+	transform: translate3d(0, 0, 0);
+}
+
+/* carousel */
