--- a/main.css
+++ b/main.css
@@ -90,9 +90,11 @@ nav.bg-color-dark-blue.scrolled{
 
 @media screen and (max-width: 640px) {
     .carousel-box{
-        width: 100%;
+        width: 100% !important;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
         border-radius: 0px 0px !important;
-    }
+    } 
 }
 
 /* Media Query */
@@ -127,13 +129,10 @@ nav div ul li a:hover{
 
 /* toggle button için */
 .navbar-toggler span {
-    display: block;
-    background-color: var(--white);
     height: 3px;
     width: 25px;
     margin-top: 5px;
     margin-bottom: 5px;
-    position: relative;
     left: 0;
     opacity: 1;
     transition: all 0.2s ease-out;
@@ -196,7 +195,7 @@ nav div ul li a:hover{
 
 /* section border */
 
-#about .bordered-section{
+.bordered-section{
     width: fit-content;
     height: fit-content;
     margin: 50px auto;
@@ -212,7 +211,6 @@ nav div ul li a:hover{
     left: 50%;
     height: 35%;
     border-radius: 30px 0 30px 0;
-    transform: translate(-50%, -50%);
   
 }
 
@@ -257,3 +255,26 @@ nav div ul li a:hover{
 }
 
 /* carousel */
+
+/* image gallery */  
+
+  .overlay {
+    bottom: 0;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(0, 0, 0,0.4);
+  }
+  
+  .overlay-text {
+    font-size: 20px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  .container .row .flex-column a .position-relative:hover .overlay{
+    opacity: 1;
+  }
+/* image gallery */
