--- a/main.css
+++ b/main.css
@@ -13,6 +13,8 @@ html{
 body{
     margin: 0;
     padding: 0;
+    border: 0;
+    outline: none;
 }
 
 /* Renkler-- */
@@ -199,5 +201,197 @@ nav div ul li a:hover{
 
 /* section border */ 
 
+hr{
+    width: 80%;
+    background-color: #fff;
+}
+ /* #contact{
+    width: 100%;
+    height: 400px;
+    position:sticky ; 
+    bottom: 0;  
+      z-index: -1; 
+} */
+
+/* .heading{
+    text-align: center;
+    font-size: 35px;
+    border-bottom: 2px dotted #fff;
+} */
+ /* .btn-info{
+     width: 50%;
+     letter-spacing: 2px;
+      background: transparent;
+     transition:all 0.5s ease-in-out; 
+     
+ } */
+ /* .icn{
+     font-family: monospace;
+     font-size: 17px;
+ } */
+ /* .btn-info:hover{
+     transform: scale(1.05); 
+    
+ } */
+ P{
+     font-size: 24px;
+ }
+ #contact{
+     width: 530px;
+     margin: 20px auto 0;
+     height: 1000px;
+ }
+ #form-wrap{
+     overflow: hidden;
+     height: 447px;
+     position: relative;
+     top: 0px;
+     transition: all ls ease-in-out .3s;
+ }
+
+ #form-wrap:before{
+     content: "";
+     position: absolute;
+     bottom: 128px;
+     left: 0px;
+     background: url('images/before.png');
+     width: 530px;
+     height: 317px;
+ }
+
+ #form-wrap:after{
+    content:"";
+    position: absolute;
+    bottom:0px ; 
+    left: 0;
+    background: url(images/after.png);
+    width: 530px;
+    height: 259px;
+ }
+
+ #form-wrap.hide:after,
+ #form-wrap.hide:before{
+     display: none;
+ }
+
+ #form-wrap:hover{
+     height:777px;
+     top: -200px;
+ }
+ form{
+     background: white;
+     position: relative;
+     top: 200px;
+     overflow: hidden;
+     height: 200px;
+     width: 400px;
+     margin: 0px auto;
+     padding: 20px;
+     border: 1px solid white;
+     border-right: 3px;
+     transition: all ls ease-in-out .3s;
+ }
+ 
+ #form-wrap:hover form{
+     height: 530px;
+ }
+  label{
+      margin: 11px 20px 0 0;
+      font-size: 13px;
+      color:black;
+      text-transform: uppercase;
+  }
+  
+  input[type=text],textarea{
+      font: 12px normal uppercase, arial, serif;
+      color: dimgray;
+      background: none;
+      width: 350px;
+      height: 35px;
+      padding: 0px 10px;
+      margin: 0 0 10px 0;
+      border: 1px solid #f8f5f1;
+      border-radius: 5px;
+  }
+  textarea{
+      height: 50px;
+      padding-top: 12px;
+      resize: none !important;
+
+  }
+  textarea:focus,
+  input[type=text]:focus{
+      background: white;
+  }
+ #form-wrap input[type=submit]{
+     position: relative;
+     font-family: tahoma;
+     font-size: 24px;
+     color: gray;
+     width: 100%;
+     text-align: center;
+     opacity: 0;
+     background: none;
+     cursor: pointer;
+     border-radius: 3px;
+     transition: opacity 0.7s ease-in-out 0s;
+ }
+
+#form-wrap:hover input[type=submit]{
+    z-index: 1;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out 1.3s;
+}
 
 
+@media screen and (max-width: 600px) {
+    /* #form-wrap:after{
+        visibility: hidden;
+    } 
+    #form-wrap:before{
+        visibility: hidden;
+    }
+    #form{
+       position: static;
+       top: 0px;
+       overflow: visible;
+    } */
+    #form-wrap{
+        visibility: hidden;
+    }
+    #form-wrap2{
+        background-color:var(--dark-blue);
+    }
+}
+@media screen and (min-width: 600px) {
+    
+    #form-wrap2{
+        visibility: hidden;
+    }
+    #form-wrap{
+        
+    }
+}
+.inner-footer{
+margin: 0;
+padding: 0;
+background-color: var(--dark-blue);
+}
+.social-links{
+    display: flex;
+}
+.social-links ul{
+    width: 300px;
+    height: 40px;
+    margin: auto;
+    display: flex;
+}
+ .social-items{  
+    list-style: none;
+}
+.social-items a{
+ padding: 10px 20px;
+ font-size: 30px;
+ color: #6cccc6;
+ 
+} 
