--- a/global.css
+++ b/global.css
@@ -13,6 +13,7 @@ html{
 body{
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 /* Renkler-- */
@@ -34,7 +35,7 @@ body{
 }
 
 .color-white{
-    color: var(--white);
+    color: var(--white) !important;
 }
 
 .color-dark-blue{
@@ -47,4 +48,104 @@ body{
 
 .color-grey{
     color: var(--grey);
+}
+/* renkler */
+
+/* scroll için-- */
+nav{
+    background-color: rgba(33, 59, 94,0.7) !important;
+    transition: .75s ease;
+}
+
+nav.scrolled{
+    background-color: rgba(33, 59, 94,0.4) !important;
+    transition: .75s ease;
+}
+/* --scroll için */
+
+.active{
+    background-color: transparent !important;
+}
+
+nav div ul li a{
+    border-radius: 5px;
+    color: rgba(0, 0, 0, 0.125);
+    text-align: center;
+    /* font-size: 2vw; */
+    /* transition: color .75s; */
+}
+
+nav div ul li a:hover{
+    color: #fff !important;
+}
+
+#navbarSupport{
+    transition: .75s ease;
+}
+
+/* toggle button için */
+.navbar-toggler span {
+    height: 3px;
+    width: 25px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    left: 0;
+    opacity: 1;
+    transition: all 0.2s ease-out;
+    transform-origin: center left;
+}
+
+.navbar-toggler span:nth-child(1) {
+    margin-top: 0.3em;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(1) {
+    transform: translate(15%, -33%) rotate(45deg);
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(2) {
+    opacity: 0;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(3) {
+    transform: translate(15%, 33%) rotate(-45deg) ;
+}
+
+.navbar-toggler span:nth-child(1) {
+    transform: translate(0%, 0%) rotate(0deg) ;
+}
+
+.navbar-toggler span:nth-child(2) {
+    opacity: 1;
+}
+
+.navbar-toggler span:nth-child(3) {
+    transform: translate(0%, 0%) rotate(0deg) ;
+}
+
+/* toggle button için */
+
+@media screen and (min-width: 1200px){
+    nav div ul li a{
+        font-size: 1.25rem;
+    }
+}
+
+@media screen and (max-width: 1201px) {
+    nav div ul li a{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    nav div ul li a{
+        font-size: .75rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    nav div ul li a{
+        font-size: .65rem;
+        font-weight: 600;
+    }
 }
