--- a/main.css
+++ b/main.css
@@ -277,7 +277,7 @@
 
 /*footer*/
 
-footer {
+ footer {
     background-color: var(--dark-blue);
     color: #fff;
     width: 100%;
@@ -288,89 +288,47 @@ article{
     grid-template-rows: auto 1fr auto;
     text-align: center;
 }
+.contactUs {
+    width: 35%;
+}
+.link{
+    width: 35%;
+}
+.social-media{
+    width: 30%;
+    text-align: center;
+}
+.social-media li{
+    list-style-type: none;
+    
+}
+.social-media li a, .contactUs p, .link p a {
+    color: #D6DDE0;
+}
 
-.footer_info{
+.abc{
     width: 90%;
     margin: 0 auto;
     display: flex;
     padding: 50px 0;
     text-align: center;
-}
-
-.footer_info .footer_width{
-    padding: 0 15px;
-}
-.footer_info h2{
-    margin-bottom: 20px;
-}
-.footer_info ul{
-     list-style-type:none; 
-}
-.iletisim li{
-    list-style-type:none; 
-}
-.about ,.iletisim{
-    width: 30%;
-}
-
-.link{
-    width: 25%;
-}
-.social-media{
-    margin-top: 15px;
-    /* margin-left: 100px; */
-}
-/* .about ul{
-    display: flex;
-} */
-.about ul li a{
-    display: block; 
-    margin-right: 30px; 
-     height: 30px; 
-    background-color: transparent; 
-    text-align: center;
-}
-.about ul li a:hover{
-background-color: #fff;
-color: #000;
-}
-.link ul li a{
-    text-decoration: none;
-    display: block;
-    margin-bottom: 15px;
-    font-size: 20px;
-}
-.link ul li a:hover{
-    color: #000;
-} 
-.iletisim ul li {    
-    display: block;
     align-items: center;
-    margin-bottom: 15px;
-}
- .iletisim ul li span {
-  margin-right: 15px;
-  text-decoration: none;
-}
-.copy-right{
-    padding: 15px 0;
-    text-align: center;
-    background:var(--dark-blue);   
+    color:#33FFFC;   
 }
 @media screen and (max-width:992px){
-    .about, .iletisim{
+    .social-media{
         width: 35%;
     }
-    .link{
+    .link , .contactUs{
         width: 30%;
     }
 }
 @media screen and (max-width:767px){
-    .about, .iletisim, .link{
+    .social-media, .contactUs, .link{
         width: 100%;
         margin-bottom: 30px;
     }
-    .footer_info{
+    .abc{
         flex-direction: column;
     }
 }
@@ -379,8 +337,6 @@ color: #000;
     margin-right: 30px;
     height: 30px;
     }
-    
-}
 
 @media screen and (max-width: 640px) {
     .carousel-box{
